2009-11-02  kitone  <kitone@gna.org>

	* plugins/actions/splitsubtitle/splitsubtitle.cc:
	Fix typo.

2009-11-01  kitone  <kitone@gna.org>

	* src/keyframes.cc:
	Fix sr #2449 : keyframe does'nt save - 0.34.0.

2009-11-01  kitone  <kitone@gna.org>

	* plugins/subtitleformats/subrip/subrip.cc:
	Fix bug #14437 : DATA LOSS - [opening SubRip] first subtitle being omitted.

2009-11-01  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	Fix build with old gcc. Fix sr #2128.

2009-11-01  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/preferences/videoplayerpage.h:
	Add OSX output. Fix sr #2128.

2009-08-27  kitone  <kitone@gna.org>

	* src/we/waveformrenderercairo.cc:
	Display keyframes before subtitles.

2009-08-24  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2009-08-21  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.34.0 release.

2009-08-19  kitone  <kitone@gna.org>

	* prepare-po.sh:
	Fix ui type files.

2009-08-19  kitone  <kitone@gna.org>

	* prepare-po.sh:
	Change glade to ui.

2009-08-19  kitone  <kitone@gna.org>

	* configure.in:
	Remove libglademm dependence.

2009-08-19  kitone  <kitone@gna.org>

	* Makefile.am:
	* configure.in:
	* plugins/actions/changeframerate/Makefile.am:
	* plugins/actions/changeframerate/changeframerate.cc:
	* plugins/actions/changeframerate/dialog-change-framerate.glade:
	* plugins/actions/changeframerate/dialog-change-framerate.ui:
	* plugins/actions/configurekeyboardshortcuts/Makefile.am:
	* plugins/actions/configurekeyboardshortcuts/configurekeyboardshortcuts.cc:
	* plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.glade:
	* plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.ui:
	* plugins/actions/errorchecking/Makefile.am:
	* plugins/actions/errorchecking/dialog-error-checking-preferences.glade:
	* plugins/actions/errorchecking/dialog-error-checking-preferences.ui: