@@ -1,3 +1,11 @@
+2009-11-12  kitone  <kitone@gna.org>
+
+	* src/filereader.cc:
+	* src/filereader.h:
+	* src/filewriter.cc:
+	* src/filewriter.h:
+	Switch to gio(mm).
+
 2009-11-02  kitone  <kitone@gna.org>
 
 	* plugins/actions/splitsubtitle/splitsubtitle.cc:
